# pure-agent

./: .dockerignore  .gitignore  README.md
.devcontainer/: devcontainer.json
claude-agent/: .dockerignore  CLAUDE.md  Dockerfile  entrypoint.sh  extract-result.jq  settings.json
e2e/: docker-compose.yml  run-argo.sh  run-e2e.sh  run-integration.sh  run-level1.sh  run-level2.sh  run-level3.sh  run-local.sh  run-unit.sh
export-handler/: Dockerfile  package-lock.json  package.json  tsconfig.test.json  vitest.config.ts
gate/: Dockerfile  pyproject.toml  requirements-dev.txt
infra-agent/: CLAUDE.md  Dockerfile
k8s/: configmap.yaml  rbac.yaml  (+5 more)
planner/: CLAUDE.md  Dockerfile  entrypoint.sh  extract-environment.jq  pyproject.toml
planner/lib/: claude-runner.sh  constants.sh  environments.sh  logging.sh  mcp-config.sh  prompt.sh  transcripts.sh  validate.sh
planner/src/planner/: __init__.py  __main__.py  cli.py  environments.py  image_selector.py  mcp_config.py
planner/tests/: claude-runner.bats  conftest.py  entrypoint.bats  environments.bats  extract-environment.bats  mcp-config.bats  test-helper.sh  test_cli.py  test_e2e.py  test_environments.py  test_image_selector.py  test_mcp_config.py
router/: Dockerfile  pyproject.toml  requirements-dev.txt  router.py  test_router.py
router/src/router/: __init__.py  __main__.py  cli.py  config.py  image_selector.py  logic.py  transcript_upload.py
router/tests/: conftest.py  test_cli.py  test_config.py  test_entrypoint.py  test_environments.py  test_image_selector.py  test_logic.py  test_transcript_upload.py
(+315 files in other folders)
