[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "planner"
version = "0.1.0"
description = "Agent environment selector for pure-agent"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
planner = "planner.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
